Fix accessibility contrast with logo

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
   align-items: center;
   text-align: center;
   font-weight: bold;
-  color: #6070ff;
+  color: #3c47a8;
   height: 20px;
   width: 76px;
   font-size: 18px;
